only kill main pid
systemd cgroups are a bitch
KillMode defaults to control-group, unfortunately mscs watch spawns some tail and socat processes, and a some point even the java process ends up in there... therefore all servers where killed when this simple script was restarted

--- a/mscs_bot.service
+++ b/mscs_bot.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Telegram Bot to issue certain commands to mscs
-Requires=network.target
 After=network-online.target
 
 [Service]
 Type=simple
 WorkingDirectory=/opt/mscs/git/mscs_bot
 ExecStart=/opt/mscs/git/mscs_bot/main.py
+KillMode=process
 Restart=always
 RestartSec=5
 
